--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aliona - Salon de Beauté & Coiffure</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <meta name="google-site-verification" content="AZYq09jzaq-wuImilSJjhhIoywnaZpd6Ox7wcexQw5I" />
+</head>
+<head>
     <style>
         body { font-family: 'Poppins', sans-serif; }
         .fade-in { opacity: 0; transform: translateY(20px); transition: opacity 1s, transform 1s; }
@@ -13,7 +16,7 @@
         .bg-gold { background-color: #D4AF37; }
         .border-gold { border-color: #D4AF37; }
         .bg-image {
-            background: url('img2.png') center/cover no-repeat;
+          background: url('img2.png') center/cover no-repeat;
             position: absolute;
             top: 0;
             left: 0;
@@ -94,4 +97,3 @@
     
 </body>
 </html>
-
